[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sub-surge"
version = "0.0.12"
description = "Update surge config"
authors = [ "Rhythmicc <rhythmlian.cn@gmail.com>",]
license = "MIT"
readme = "README.md"
[[tool.poetry.packages]]
include = "sub_surge"

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/Users/lianhaocheng/.local/share/uv/tools/sub-surge/lib/python3.13/site-packages/"

[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "mini"
port = 22
path = "/opt/homebrew/lib/python3.13/site-packages/"

[tool.poetry.dependencies]
python = "^3.10"
qpro = "*"
quickstart_rhy = "*"

[tool.poetry.scripts]
sub-surge = "sub_surge.main:main"

[tool.qpro.config]
build = ""
entry_point = "sub_surge/main.py"
executable = "python3 -m sub_surge.main"
input_file = ""
template_root = ""
enable_complete = true
