[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sub-surge"
version = "2.1.2"
description = "Config-driven Surge subscription manager with Web UI"
authors = [ "Rhythmicc <rhythmlian.cn@gmail.com>",]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sub_surge" }
]

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/opt/homebrew/lib/python3.13/site-packages/"

[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "mini"
port = 22
path = "/opt/homebrew/lib/python3.14/site-packages/"

[tool.poetry.dependencies]
python = "^3.10"
qpro = "*"
httpx = "^0.27.0"
quickstart_rhy = "*"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
cos-python-sdk-v5 = "*"
pyyaml = "^6.0"

[tool.poetry.scripts]
sub-surge = "sub_surge.main:main"
sub-surge-legacy = "sub_surge.main:main"

[tool.qpro.config]
build = ""
entry_point = "sub_surge/main.py"
executable = "python3 -m sub_surge.main"
input_file = ""
template_root = ""
enable_complete = true
